# wordcount

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: char.rs  line.rs
