[package]
name = "wordcount"
version = "0.1.0"
authors = ["10mohi6"]
edition = "2018"
license = "MIT"
description = "シンプルな文字、単語、行の出現頻度の計数機能を提供します。"
readme = "README.md"
repository = "https://github.com/10mohi6/wordcount"
categories = ["command-line-utilities"]
keywords = ["example", "frequency", "text"]

[badges]
travis-ci = { repository = "https://app.travis-ci.com/10mohi6/wordcount.svg?branch=main"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
